--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                         <li>AR functionality and controls using Vuforia</li>
                         <li>Optimization for mobile devices</li>
                         <li>UI implementation</li>
-                        <li>Client-side network implementation</li>
+                        <li>Custom masking and projection shaders</li>
                         <li>VFX animation scripting</li>
                     </ul>
                   <!--<h6>What I Learned</h6>
@@ -634,7 +634,7 @@
                         <li>Player UI and health/damage system</li>
                         <li>Turn based gameplay systems</li>
                         <li>Various spell mechanics</li>
-                        <li>Various spell particle effects</li>
+                        <li>Various particle effects</li>
                         <li>Game Design (UI, player abilities, interactions)</li>
                     </ul>
                   <h6>What I Learned</h6>
@@ -828,8 +828,7 @@
                     I am working with a team of engineers, artists, musicians, and dungeon masters to create Augmented Realms. <br>My contributions so far include:
                     <ul class="center-list">
                         <li>AR functionality and controls using Vuforia</li>
-                        <li>World building tools using a procedural hex map</li>
-                        <li>AR functionality and controls using Vuforia</li>
+                        <li>World building tools using a procedural hex mesh</li>
                         <li>UI implementation</li>
                         <li>Optimization for mobile devices</li>
                         <li>Client-side network implementation</li>
@@ -938,10 +937,9 @@
                     <p>Trnasfliction is a stealth/puzzle game where you play the villain. The player has infected themself with a deadly plague and must sneak past troublesome AI doctors in order to reach the center of the CDC and spread their disease to the masses. Enemies use a state machine based AI and field of view detection to search for the player, while the player can spread their disease to NPCs using a dynamic disease transmission system.
                     </p>
                     <h6>Contributions</h6>
-                    I worked with a team of 2 other engineers, 2 game designers, and 2 artists to create Transfliction. <br>My contributions include:
+                    I worked with a team of 3 other engineers and 2 artists to create Transfliction. <br>My contributions include:
                     <ul class="center-list">
                         <li>FOV detection and visualization using mesh geometry</li>
-                        <li>Enemy AI state machine using PlayMaker</li>
                         <li>UI menu design and implementation</li>
                         <li>Sound design and implementation</li>
                         <li>General bug testing and QA</li>
