Updated resume and project order

--- a/index.html
+++ b/index.html
@@ -102,16 +102,6 @@
               <img src="img/portfolio/Cthulu/Cthulu.jpg" class="img-fluid" alt="Reign of Cthulu">
             </a>
           </div>
-          <div class="col-sm-3 portfolio-item sr-icon filter vr mobile">
-            <a class="portfolio-link" href="#portfolioModalAugmentedRealms" data-toggle="modal">
-              <div class="caption">
-                <div class="caption-content">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img src="img/portfolio/AugmentedRealms/AugmentedRealms.jpg" class="img-fluid" alt="Augmented Realms">
-            </a>
-          </div>
           <div class="col-sm-3 portfolio-item sr-icon  filter vr">
             <a class="portfolio-link" href="#portfolioModalRedDwarf" data-toggle="modal">
               <div class="caption">
@@ -130,6 +120,16 @@
                 </div>
               </div>
               <img src="img/portfolio/InVRasion/InVRasion.jpg" class="img-fluid" alt="InVRasion">
+            </a>
+          </div>
+          <div class="col-sm-3 portfolio-item sr-icon filter vr mobile">
+            <a class="portfolio-link" href="#portfolioModalAugmentedRealms" data-toggle="modal">
+              <div class="caption">
+                <div class="caption-content">
+                  <i class="fa fa-search-plus fa-3x"></i>
+                </div>
+              </div>
+              <img src="img/portfolio/AugmentedRealms/AugmentedRealms.jpg" class="img-fluid" alt="Augmented Realms">
             </a>
           </div>
           <div class="col-sm-3 portfolio-item sr-icon  filter hackathon">
@@ -428,7 +428,7 @@
                     <p>
                         <i class="fa fa-gamepad"></i> Note: Supports both HTC Vive as well as keyboard/mouse controls.
                         <br>
-                        <a href="files/Red Dwarf - Gameplay Manual.pdf">
+                        <a href="files/Red_Dwarf_Gameplay_Manual.pdf">
                         View Gameplay Manual
                         </a> 
                     </p>
@@ -450,7 +450,7 @@
       </div>
     </div>
     
-        <div class="portfolio-modal modal fade" id="portfolioModalInVRasion" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModalInVRasion" tabindex="-1" role="dialog" aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
