--- a/index.html
+++ b/index.html
@@ -200,15 +200,13 @@
             <div>
               <img src="img/profile.jpg" class="img-fluid img-profile">
             </div>
-              <p>I'm an avid programmer with a passion for creating front-end user experiences. My experience has given me opportunities to pitch in on many areas of development and fed my interests in UI, gameplay, and graphics programming for PC, web, and mobile.<br><br> 
-                  
-              I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position with a company I can dedicate myself to for many years.<br><br> 
+              <p>I'm an avid programmer with experience in the games industry developing AR/VR and front-end applications for PC, web, and mobile platforms. I recently graduated from Cal Poly Pomona with a degree in Computer Science and I am currently pursuing a full-time programming position with a company I can dedicate myself to for many years.<br><br> 
 
               Through my personal projects, I have become proficient with Unity3D and experimented extensively with AR/VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in  <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications. Currently I am working with several AR/VR startups to help get their awesome ideas off the ground.<br><br>
                   
-              As President of the <strong><a href="http://www.cppgamedev.com" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development and interest in computer graphics previously nonexistent at my college. I also founded the <strong><a href="http://sgda.io" class="inline-white">Student Game Developer Alliance</a></strong>, the largest student-organized game development association in California, which enables hundreds of students from 9 universities to practice skills and learn teamwork through game development.</p>
+              I am also a dedicated leader driven by iterative collaboration with large multidisciplinary teams and adept at working with artists and designers to bring their vision to life. I founded the <strong><a href="http://sgda.io" class="inline-white">Student Game Developer Alliance</a></strong> to make a positive impact on the culture of the game industry starting at the college level. In just a few years it has grown into the largest student-organized game development association in California, enabling hundreds of students from 9 universities to learn new skills and practice teamwork through game development.<br><br>
 
-              My colleagues know me to be a quick learner, friendly, meticulous, open-minded, and inspired. I am driven by iterative collaboration with large multidisciplinary teams and I am adept at working with artists and designers to bring their vision to life. If you are interested in working with me to create epic user experiences and innovative technology I can't wait to hear from you!<br><br> 
+              My colleagues know me to be an inspired learner, friendly, meticulous, and innovative. I'm always interested in meeting new people and exploring new interesting projects. If you would like to work with me to create epic user experiences I can't wait to hear from you!</p> 
             </div>
           </div>
         </div>
