ROC description update

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                       </video>
                   </div>
                     
-                  <p class="modal-intro">Reign of Cthulhu is a crowd-funded game I developed for Wareplai. The demo I helped create played a large part in the game's <a href="https://www.kickstarter.com/projects/bloodofcthulhu/first-ever-ar-native-game">Kickstarter</a> reaching 235% of its fundraising goal.
+                  <p class="modal-intro">Reign of Cthulhu is a crowd-funded game I developed for Wareplai. The demo I helped create played a significant role in the game's <a href="https://www.kickstarter.com/projects/bloodofcthulhu/first-ever-ar-native-game">Kickstarter</a> reaching 235% of its fundraising goal.
                   </p>
                   <h6>About the project</h6>
                     <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, Vuforia</div>
@@ -330,8 +330,7 @@
                         <li>AR functionality and controls using Vuforia</li>
                         <li>Card mechanics</li>
                         <li>Integration and optimization of assets for mobile devices</li>
-                        <li>Masking and projection shaders</li>
-                        <li>VFX animation scripting</li>
+                        <li>UI implementation</li>
                     </ul>
                   <!--<h6>What I Learned</h6>
                     <p>
